# pyGrasp

./: .gitmodules  README.md  pyproject.toml  requirements.txt  setup_env.bash
models/: allegro_hand_model.py
models/crawling_hand/: .gitignore  compute_intertia.ipynb  controller.py  controller_couple.py  load_xml.py  mjmodel.xml  readme.md  six_finger_hand.py
models/crawling_hand/crawling_hand_description/: converted_MCP_motor_1.stl  converted_MCP_spread_motor_1.stl  converted_PIP_DIP_motor_1.stl  converted_base_link.stl  converted_distal_1.stl  converted_metacarpal_1.stl  converted_middle_1.stl  converted_proximal_1.stl  six_finger_hand_llll.urdf
models/crawling_hand/description/: URDF_finger_llll.urdf  URDF_finger_ssss.urdf  six_finger_hand_llll.urdf
models/crawling_hand/descriptions/: five_capsule_finger_hand.xml  five_finger_hand.xml  five_finger_hand_llll.xml  five_finger_hand_ssss.xml  five_fingers_ssss.xml  hand_test01.xml  insole_pinch.xml  six_finger_hand_llll.xml  six_fingers_llll.xml  spider.xml  spider_test.xml
models/crawling_hand/fingers/longest/: URDF_finger_llll.urdf
models/crawling_hand/gait_test/: gait_test.ipynb  gait_test_01.ipynb  gait_test_02.ipynb
models/crawling_hand/result/: iiwa7_floor.urdf  iiwa7_hand.urdf
scripts/: example_extended_fk.py  example_fk.py  example_get_best_links.py  example_learning_geometry.py  example_opposition_space.py  example_reachable_space.py  example_synthetise_grasp.py  fk_example.py  learning_robot_geometry.py
src/pyGrasp/: __init__.py  grasp_synthesiser.py  opposition_spaces.py  reachable_spaces.py  robot_model.py  utils.py
src/pyGrasp/tools/: alphashape.py  hole_filling.py  numerical_computation.py
(+21 files in other folders)
